# INF2004

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flash_benchmark.c  hw_config.c  lwipopts.h  main.c  main.uf2  mqtt_webgui.c  mqtt_webgui.uf2  pc_client.py  sd_card.c  sd_card.h  spi_flash_webgui.uf2  wifi_exchange.c  wifi_exchange.uf2
Flash Universal Tool/: CMakeLists.txt  readme.txt
Flash Universal Tool/include/: config.h  lwipopts.h  sd_card.h  spi_diag.h  web_server.h
Flash Universal Tool/lib/fatfs/: diskio.c  ff.c  ff.h
Flash Universal Tool/src/: cli.c  flash_ops.c  json.c  main.c  mqtt.c  sd_card.c  spi_diag.c  spi_ops.c
Flash_Universal_Tool/: CMakeLists.txt
Flash_Universal_Tool/docs/: README.txt
Flash_Universal_Tool/include/: cli.h  flash_ops.h  globals.h  mqtt.h  sd_card.h
Flash_Universal_Tool/lib/fatfs/: diskio.h
Flash_Universal_Tool/src/: main.c  sd_card.c  spi_ops.c  web_server.c
INF2004/: .gitignore
INF2004/spi_comms/: flash_db.c  flash_db.h  flash_info.h  functions.c  main.c
fatfs/: diskio.c
logs/: flash_log_001.json
pico-pico/: .gitignore  CMakeLists.txt  functions.c  functions.h  main.c  slave.c
spi_comms/: CMakeLists.txt  CMakeLists1.txt  config.h  flash_benchmark.c  flash_benchmark.h  functions.c  functions.h  hw_config.h  integrated_spi_webgui.c  json.c  json.h  lwipopts.h  main.c  sd_card.c  sd_card.h  spi_flash_webgui.uf2  spi_ops.h
spi_comms/.cache/clangd/index/: functions.c.FC43B70ACC9D1895.idx  functions.h.DC6AC38E9E2AB4A8.idx  main.c.5870D3EFC7FA25CC.idx
spi_comms/fatfs/: diskio.h  ff.h
